--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container mt-5">
     <h1>Login</h1>
-    <form action="/auth/login" method="POST">
+    <form action="/login" method="POST">
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input type="email" class="form-control" id="email" name="email" required>
