--- a/views/signup.html
+++ b/views/signup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container mt-5">
     <h1>Sign Up</h1>
-    <form action="/auth/register" method="POST">
+    <form action="/register" method="POST">
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" name="name" required>
