bug fixing for server

--- a/views/adminDashboard.html
+++ b/views/adminDashboard.html
@@ -16,13 +16,13 @@
               <a class="nav-link active" href="#">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Manage Users</a>
+              <a class="nav-link" href="/admin/users">Manage Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Manage Tasks</a>
+              <a class="nav-link" href="/admin/tasks">Manage Tasks</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Payments</a>
+              <a class="nav-link" href="/admin/payments">Payments</a>
             </li>
           </ul>
         </div>
